src/styles/custom.css
/* ... */
#moreComment:hover {
    background-color: var(--hover-button-background-primary);
    color: var(--hover-button-text-primary);
}

/* ========================================
        QUOTE
======================================== */

.quote-wrap {
    position: relative;
    overflow: hidden;
    text-align: left;
    padding: 40px 24px;
}
.quote-inner {
    position: relative;
    width: 70%;
}

.quote-wrap .quote-caption {
    font-weight: 500;
    color: var(--text-primary);
}
.quote-wrap span {
    font-family: var(--heading-family);
    font-size: calc(var(--heading-size) - var(--fs-extra-6));
    font-weight: 700;
    color: var(--text-primary);
}

@media (min-width: 700px) {
    .quote-wrap {
        padding: 80px 24px;
    }
}

/* ========================================
        FOOTNOTE
======================================== */
.footnote-wrap {
    position: relative;
    overflow: hidden;
    padding: 80px 0px 50%;
    min-height: var(--body-height);
    background-image: var(--bg);
    background-size: cover;
    background-position: center;
    background-color: var(--background-secondary);
}

.footnote-wrap::before {
    content: "";
    position: absolute;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    background: linear-gradient(
        180deg,
        #ece8d8 0%,
        rgba(236, 232, 216, 0) 100%
    );
}

/* Logo */
.footnote-wrap .logo-wrap {
    width: 100%;
    max-width: 130px;
    height: auto;
    margin: 0 auto;
}

.footnote-wrap .footnote {
    text-align: center;
    padding: 40px 24px;
    display: flex;
    flex-direction: column;
    gap: 14px;
}

/* Details */
.footnote {
    z-index: 10;
    position: relative;
}
.footnote .footnote-title {
    /* max-width: 300px; */
    font-weight: 500;
    margin: 0 auto;
    font-size: calc(var(--body-main-text-size));
    color: var(--text-primary);
}
/* 
@media (min-width: 200px) and (max-width: 961px) {
    .footnote .footnote-title {
        max-width: 250px;
    }
} */

.footnote p {
    font-weight: 400;
}

.footnote .top-text {
    font-size: calc(var(--heading-footnote-size)) !important;
    color: var(--text-primary);
}
.footnote .bottom-text {
    font-size: calc(var(--heading-footnote-size)) !important;
    color: var(--text-primary);
}
.footnote .date {
    color: var(--text-primary);
}

@media (min-width: 560px) and (max-width: 960px) {
    .footnote-wrap .footnote {
        padding: 40px 24px 80px;
        gap: 16px;
    }
    .footnote .footnote-title {
        max-width: 250px;
    }
}

@media (min-width: 1200px) {
    .footnote-wrap .footnote {
        padding: 40px 24px 80px;
        gap: 16px;
    }
    /* .footnote .footnote-title {
        max-width: 260px;
    } */
}

/* ========================================
        FOOTER
======================================== */
section.footer {
    background: var(--background-tertiary);
    padding: 0;
}
section.footer .footer-inner {
    padding: 10px 0;
}
section.footer .footer-inner p {
    font-size: var(--body-text-size);
    font-weight: 400;
    color: var(--text-primary);
}
.footer .footer-inner .footer-logo {
    width: 55px;
}
section.footer .footer-inner .footer-logo path {
    fill: var(--text-primary);
}

@media only screen and (max-width: 960px) {
    section.footer .footer-inner.flex-column {
        flex-direction: column;
        padding-top: 80px;
        padding-bottom: 150px;
    }
    section.footer .footer-inner.flex-column p {
        margin-right: 0;
        font-size: calc(var(--body-text-size) + var(--fs-extra-2));
    }
    section.footer .footer-inner.flex-column .footer-logo {
        margin-top: 10px;
        width: 150px;
    }
}

/* =======================
        PERSON
======================= */
section.person p {
    font-family: var(--roboto);
    font-size: 15px;
    font-weight: 400;
    line-height: 1.4;
    color: var(--dark-clr);
}

/* =================================
        ORNAMENTS WRAPPER
================================= */
.ornaments-wrapper {
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    pointer-events: none;
}
.image-wrap {
    position: relative;
    width: 100%;
}
/* .foot-logo img {
    height: 105px !important;
} */
.image-wrap img {
    width: 100%;
    height: auto;
    max-width: 100%;
}

/* primary pane */
section.primary-pane .ornaments-wrapper {
    z-index: 1;
}
.orn-primary-1 {
    position: absolute;
    bottom: 0;
    right: 0;
    width: 25%;
    transform: translate(27%, -5%);
}
.orn-primary-2 {
    position: absolute;
    bottom: 0;
    width: 44%;
}
.orn-primary-2.left {
    left: 0;
    transform: translate(-51%, 0%);
}
.orn-primary-2.right {
    right: 0;
    transform: translate(51%, 0%) scaleX(-1);
}
.orn-primary-3 {
    position: absolute;
    bottom: 0;
    left: 0%;
    width: 28%;
    transform: translate(-48%, -3%);
}

.orn-primary-4 {
    position: absolute;
    bottom: 0;
    left: 50%;
    width: 100%;
    transform: translate(-50%, 30%);
}
.orn-primary-4 .image-wrap {
    background-image: var(--grass);
    background-repeat: repeat-x;
    background-size: 100% auto;
}
.orn-primary-4 .image-wrap img {
    opacity: 0;
}
.orn-primary-5 {
    position: absolute;
    bottom: 0;
    left: 0;
    width: 50%;
    transform: translate(-22%, 18%);
}
.orn-primary-6 {
    position: absolute;
    bottom: 0;
    right: 0;
    width: 30%;
    transform: translate(30%, 14%);
}

/* orn top cover */
.orn-tp {
    position: absolute;
    bottom: 0;
    right: 0;
    width: 55%;
    transform: translate(27%, -5%);
}
.orn-tpc-1 {
    position: absolute;
    bottom: 0;
    width: 94%;
}
.orn-tpc-1.left {
    left: 0;
    transform: translate(-51%, 0%);
}
.orn-tpc-1.right {
    right: 0;
    transform: translate(51%, 0%) scaleX(-1);
}
.orn-tpc-2 {
    position: absolute;
    bottom: 0;
    left: 0%;
    width: 48%;
    transform: translate(-48%, -3%);
}
/* ... */

